# scrumban

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  followup.md
.claude/agents/: architect.md  bug-hunter.md  ci-devops.md  docs-writer.md  explorer.md  implementer.md  reviewer.md  smoke-tester.md
backend/: .env.example  .env.local.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260415_1754_users_and_tg_link_codes.py  20260415_1914_refresh_tokens.py  20260419_1001_phase2_boards_columns_tasks_labels.py
backend/app/: main_api.py  main_bot.py
backend/app/api/: auth.py  boards.py  columns.py  deps.py  me.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  board.py  column.py  label.py  refresh_token.py  task.py  task_label.py  tg_link_code.py  user.py
backend/app/domain/: auth.py  boards.py  columns.py  labels.py  tasks.py
backend/app/repositories/: board_repo.py  column_repo.py  label_repo.py  refresh_token_repo.py  task_repo.py  tg_link_code_repo.py  user_repo.py
backend/app/services/: auth_service.py  boards_service.py  columns_service.py  labels_service.py  tasks_service.py  tg_link_service.py
backend/tests/: conftest.py  test_auth.py  test_boards_archive.py  test_boards_create.py  test_boards_get.py  test_boards_list.py  test_boards_update.py  test_columns_create.py  test_columns_delete.py  test_columns_reorder.py  test_columns_update.py  test_health.py  test_phase2_models.py  test_tg_link.py
deploy/: docker-compose.yml
docs/: loop.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
scripts/: pre-push-main-guard.sh  test-no-verify-guard.sh
tasks/: lessons.md  todo.md
(+50 files in other folders)
